--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <title>EdukaS1</title>
+    <title>Learedu</title>
     <link rel="stylesheet" href="style/Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/Bootstrap/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.min.css"
@@ -54,8 +54,8 @@
 
     <section class="main-container">
         <div class="first-sec">
-            <h1>APA ITU EDUKAS1 ?</h1>
-            <p>EdukaS1 merupakan platform digital yang menyediakan tempat dosen atau tutor untuk memberikan video
+            <h1>APA ITU Learedu ?</h1>
+            <p>Learedu merupakan platform digital yang menyediakan tempat dosen atau tutor untuk memberikan video
                 pembelajaran
                 yang
                 bersifat edukatif dan tempat belajar bagi mahasiswa untuk setiap mata kuliah yang ada pada setiap
@@ -65,7 +65,7 @@
         </div>
 
         <div class="second-sec">
-            <h1>JENIS VIDEO DI EDUKAS1</h1>
+            <h1>JENIS VIDEO DI Learedu</h1>
             <div class="second-sec-content">
                 <div class="video">
                     <p>Video Gratis</p>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="third-sec">
-            <h1>CARA MEMBELI VIDEO BERBAYAR EDUKAS1</h1>
+            <h1>CARA MEMBELI VIDEO BERBAYAR Learedu</h1>
             <ol>
                 <li>Pilih video berbayar yang akan dibeli</li>
                 <li>Melakukan pengiriman nominal uang ke no rekening ini : 4860-01-016787-53-1 (BRI a.n Tavan faiz)</li>
@@ -92,13 +92,13 @@
 
     <footer id="footer">
         <div class="icon">
-            <a target="_blank" href="mailto: edukas1.startup@gmail.com">
+            <a target="_blank" href="mailto: Learedu.startup@gmail.com">
                 <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-envelope fa-stack-1x white"></i>
                 </span>
             </a>
-            <a target="_blank" href="https://www.instagram.com/edukas1/">
+            <a target="_blank" href="https://www.instagram.com/Learedu/">
                 <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-instagram fa-stack-1x white"></i>
@@ -111,7 +111,7 @@
                 </span>
             </a>
         </div>
-        <p>EdukaS1 &copy; 2020. All rights reserved.</p>
+        <p>Learedu &copy; 2020. All rights reserved.</p>
     </footer>
 
 
