--- a/loginTutor.html
+++ b/loginTutor.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" type="text/css" href="style/loginTutor.css">
 
-    <title>EdukaS1-Login</title>
+    <title>Learedu-Login</title>
 </head>
 
 <body>
@@ -91,13 +91,13 @@
 
   <footer id="footer">
     <div class="icon">
-        <a target="_blank" href="mailto: edukas1.startup@gmail.com">
+        <a target="_blank" href="mailto: Learedu.startup@gmail.com">
           <span class="fa-stack fa-lg">
             <i class="fas fa-circle fa-stack-2x"></i>
             <i class="fas fa-envelope fa-stack-1x white"></i>
           </span>
         </a>
-        <a target="_blank" href="https://www.instagram.com/edukas1/">
+        <a target="_blank" href="https://www.instagram.com/Learedu/">
           <span class="fa-stack fa-lg">
             <i class="fas fa-circle fa-stack-2x"></i>
             <i class="fab fa-instagram fa-stack-1x white"></i>
@@ -110,7 +110,7 @@
           </span>
         </a>
     </div>
-    <p>EdukaS1 &copy; 2020. All rights reserved.</p>
+    <p>Learedu &copy; 2020. All rights reserved.</p>
   </footer>
     
 
