--- a/video/video/part/part1.html
+++ b/video/video/part/part1.html
@@ -3,7 +3,7 @@
 <head>
 	 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <title>EdukaS1</title>
+    <title>Learedu</title>
     <link rel="stylesheet" href="style/Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style/Bootstrap/js/bootstrap.bundle.min.js">
@@ -195,13 +195,13 @@
 
      <footer id="footer">
         <div class="icon">
-            <a target="_blank" href="mailto: edukas1.startup@gmail.com">
+            <a target="_blank" href="mailto: Learedu.startup@gmail.com">
                 <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-envelope fa-stack-1x white"></i>
                 </span>
             </a>
-            <a target="_blank" href="https://www.instagram.com/edukas1/">
+            <a target="_blank" href="https://www.instagram.com/Learedu/">
                 <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-instagram fa-stack-1x white"></i>
@@ -214,7 +214,7 @@
                 </span>
             </a>
         </div>
-        <p>EdukaS1 &copy; 2020. All rights reserved.</p>
+        <p>Learedu &copy; 2020. All rights reserved.</p>
     </footer>
 
 
