--- a/SignupTutor.html
+++ b/SignupTutor.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>EdukaS1-SignUp</title>
+    <title>Learedu-SignUp</title>
 
     <link rel="stylesheet" type="text/css" href="skins.css">
     <!--script nav-->
@@ -52,7 +52,7 @@
     <main>
         <div class="form">
             <h1>Sign Up</h1>
-            <h4>Tutor's EdukaS1</h4>
+            <h4>Tutor's Learedu</h4>
             <form>
                 <div class="form-group">
                     <label for="inputAddress">Username</label>
@@ -91,13 +91,13 @@
     </main>
     <footer id="footer">
         <div class="icon">
-            <a target="_blank" href="mailto: edukas1.startup@gmail.com">
+            <a target="_blank" href="mailto: Learedu.startup@gmail.com">
                 <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fas fa-envelope fa-stack-1x white"></i>
                 </span>
             </a>
-            <a target="_blank" href="https://www.instagram.com/edukas1/">
+            <a target="_blank" href="https://www.instagram.com/Learedu/">
                 <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-instagram fa-stack-1x white"></i>
@@ -110,7 +110,7 @@
                 </span>
             </a>
         </div>
-        <p>EdukaS1 &copy; 2020. All rights reserved.</p>
+        <p>Learedu &copy; 2020. All rights reserved.</p>
     </footer>
 
 
