--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <title>EdukaS1</title>
+    <title>Learedu</title>
     <link rel="stylesheet" href="style/Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/Bootstrap/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.min.css"
@@ -48,7 +48,7 @@
             <div class="header-container">
                 <div class="header-content">
                     <h3>Welcome To</h3>
-                    <h1>EdukaS1</h1>
+                    <h1>Learedu</h1>
                     <p>Learn and Teach for
                         Bachelor Degree Online
                     </p>
@@ -85,13 +85,13 @@
         <section class="section fp-auto-height">
             <div class="section-container" id="footer">
                 <div class="icon">
-                    <a target="_blank" href="mailto: edukas1.startup@gmail.com">
+                    <a target="_blank" href="mailto: Learedu.startup@gmail.com">
                         <span class="fa-stack fa-lg">
                             <i class="fas fa-circle fa-stack-2x"></i>
                             <i class="fas fa-envelope fa-stack-1x white"></i>
                         </span>
                     </a>
-                    <a target="_blank" href="https://www.instagram.com/edukas1/">
+                    <a target="_blank" href="https://www.instagram.com/Learedu/">
                         <span class="fa-stack fa-lg">
                             <i class="fas fa-circle fa-stack-2x"></i>
                             <i class="fab fa-instagram fa-stack-1x white"></i>
@@ -104,7 +104,7 @@
                         </span>
                     </a>
                 </div>
-                <p>EdukaS1 &copy; 2020. All rights reserved.</p>
+                <p>Learedu &copy; 2020. All rights reserved.</p>
             </div>
         </section>
     </div>
