--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body>
 
     <nav id="web-navbar" class="nav-course navbar navbar-expand-lg navbar-dark fixed-top py-2">
-        <a class="navbar-brand" href="index.html"><img src="style/img/logo.png" alt=""></a>
+        <a class="navbar-brand" href="index.html"><img src="style/img/logo2.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
